Ops/Kubernetes/PrpleSchool - Kubernetes & Helm/src/postgres-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16.1
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
        volumeMounts:
          - name:  postgres-data
            mountPath:  var/lib/postgresql/data
            subPath: postgres
    volumes:
     - name: postgres-data
       persistentVolumeClaim:
        claimName: postgres-pvc
