Ops/Kubernetes/PrpleSchool - Kubernetes & Helm/src/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 5432
    protocol: TCP
  selector:
    components: postgres
